--- a/portfolio.css
+++ b/portfolio.css
@@ -14,17 +14,24 @@ a {
     margin: 0px auto;
 }
 
+/* Colors */
+:root{
+    --green: #38b000;
+    --background1: #323445;
+    --background2: #242533;
+}
 /* Top nav */
 .top-nav {
     width: 100%;
-    height: 50px;
-    background-color: #000;
+    height: 70px;
+    background-color: #242533;
     color: white;
     text-transform: none;
     padding: 10px 0px;
+    padding-top: 17px;
+    box-sizing: border-box;
     position: sticky;
     top: 0px;
-    border-bottom: 6px solid #fead20;
     z-index: 200;
 }
 
@@ -40,9 +47,9 @@ a {
 .top-nav .wrapper .logo {
     height: 52px;
     width: 50px;
-    background-image: url("my_pic.jpg");
+    background-image: url(./images/9.png);
     background-size: contain;
-    border-radius: 25px;
+    background-repeat: no-repeat;
     margin-right: 10px;
     cursor: pointer;
 }
@@ -67,7 +74,8 @@ a {
 .top-nav .wrapper nav ul li a:hover,
 .top-nav .wrapper nav ul li a.active {
     text-decoration: underline;
-    color: #ffc857;
+    /* color: #ffc857; */
+    color: var(--green);
 }
 
 .top-nav .wrapper nav ul li a {
@@ -118,6 +126,8 @@ a {
     width: 100%;
     min-height: 570px;
     background-color: #242533;
+    padding: 20px 0px;
+    box-sizing: border-box;
 }
 
 .header-wrapper .wrapper {
@@ -135,10 +145,11 @@ a {
 .header-wrapper .wrapper .left .my-pic {
     height: 250px;
     width: 250px;
-    background-image: url("my_pic.jpg");
+    background-image: url(./images/my_pic_bw.png);
     background-size: contain;
     background-repeat: no-repeat;
-    border-radius: 25px;
+    border-radius: 50%;
+    border: 4px solid #fff;
     margin-top: 150px;
     cursor: pointer;
 }
@@ -159,30 +170,64 @@ a {
 
 .header-wrapper .wrapper .right .info {
     max-width: 600px;
-    padding: 40px 20px;
+    padding: 20px;
+    padding-top: 40px;
     font-size: 20px;
     font-family: "Roboto slab", serif;
     color: white;
     font-weight: 400;
     margin-left: 45px;
 }
-
-.header-wrapper .wrapper .right .button{
-    font-size: 22px;
-    font-family: "Roboto slab", serif;
-    color: white;
-    font-weight: 700;
-    background-color: #fead20;
-    padding: 10px;
-    border-radius: 10px;
-    width: fit-content;
-    margin-left: 66px;
+.header-wrapper .wrapper .right .links{
+    display: flex;
+    gap: 15px;
+    height: 30px;
+    margin-left: 65px;
     margin-bottom: 20px;
 }
+.header-wrapper .wrapper .right .links img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 2px solid #eee;
+    cursor: pointer;
+}
+.header-wrapper .wrapper .right .button-container{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+    margin-left: 66px;
+}
+.header-wrapper .wrapper .right .button{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif, serif;
+    color: white;
+    font-weight: 700;
+    background-color: var(--green);
+    padding: 10px 15px;
+    border-radius: 30px;
+    width: fit-content;
+}
+.header-wrapper .wrapper .right .button2{
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif, serif;
+    color: white;
+    font-weight: 700;
+    padding: 6px;
+    border-radius: 30px;
+    border: 4px solid var(--green);
+    box-sizing: border-box;
+    text-align: center;
+    width: 190px;
+}
 
-.header-wrapper .wrapper .right .button:hover{
+.header-wrapper .wrapper .right .button:hover,
+.header-wrapper .wrapper .right .button2:hover{
     background-color: white;
     color: #242533;
+    border-color: white;
 }
 
 /* Content Section */
@@ -203,7 +248,8 @@ a {
 
 .content-wrapper .about,
 .content-wrapper .projects,
-.content-wrapper .skills {
+.content-wrapper .skills,
+.content-wrapper .contact {
     width: 80%;
     margin: 0px auto;
     color: white;
@@ -239,13 +285,12 @@ a {
 }
 
 .projects .contents .content {
-    width: 280px;
     min-height: 404px;
     border-radius: 10px;
-    padding: 30px 0px;
+    padding: 30px 10px;
     margin: 0px 10px;
     box-sizing: border-box;
-    background-color: #fead20;
+    border: 3px solid var(--green);
 }
 
 .projects .contents .content:hover,
@@ -255,26 +300,43 @@ a {
 }
 
 .projects .contents .content .heading {
-    width: 85%;
+    width: 250px;
     margin: 0 auto;
-    padding: 20px 0px;
+    padding: 20px 10px;
     font-size: 25px;
     font-family: "Roboto slab", serif;
     color: white;
     font-weight: 700;
-    border-bottom: 6px solid #fcfcfc;
+    border-bottom: 6px solid var(--green);
 }
 
 .projects .contents .content .info {
     width: 85%;
-    margin: 0 auto;
-    padding: 20px 0px;
+    padding: 20px 10px;
     color: #fcfcfc;
     font-size: 15px;
     font-family: "Roboto slab", serif;
     font-weight: 400;
 }
-
+.projects .contents .content .button-container{
+    display: flex;
+    gap: 20px;
+    padding: 0px 10px;
+}
+.projects .contents .content .button-container .button{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif, serif;
+    color: white;
+    font-weight: 700;
+    border: 4px solid var(--green);
+    padding: 6px 15px;
+    border-radius: 30px;
+    width: 70px;
+    text-align: center;
+}
+.projects .contents .content .button-container .button:hover{
+    background-color: var(--green);
+}
 .projects .contents .content .info p,
 .footer-wrapper .left .contact p {
     margin-bottom: 10px;
@@ -315,7 +377,7 @@ a {
     font-size: 20px;
     margin: 20px;
     padding: 10px;
-    border-top: 5px solid #fead20;
+    border-top: 5px solid var(--green);
     color: #fcfcfc;
     font-family: 'Roboto Slab', serif;
     font-weight: 700;
@@ -350,9 +412,47 @@ a {
 .skills .contents::-webkit-scrollbar-thumb {
     border-radius: 6px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #fead20;
+    background-color: var(--green);
 }
 
+/* Contact */
+.contact .form-container {
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.contact .form{
+    width: fit-content;
+}
+.contact form label{
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
+    font-weight: 700;
+    margin-left: 5px;
+}
+.contact form input,
+.contact form textarea{
+    background-color: var(--background2);
+    border: 2px solid var(--green);
+    border-radius: 10px;
+    width: 400px;
+    height: 40px;
+    margin: 10px 0px;
+    padding: 7px 15px;
+    box-sizing: border-box;
+    color: #ffff;
+}
+.contact .submit{
+    width: 100px;
+    height: 35px;
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: 300px;
+    color: #fcfcfc;
+    background-color: var(--green);
+    border-radius: 12px;
+    border: none;
+}
 /* Footer */
 footer {
     background-color: #000;
@@ -529,12 +629,19 @@ footer {
     }
 }
 
-@media(max-width:750px) {
-    .header-wrapper .wrapper .left {
-        display: none;
+@media(max-width:865px) {
+    .header-wrapper .wrapper {
+        flex-direction: column;
+    }
+    .header-wrapper .wrapper .left .my-pic{
+        margin-top: 20px;
+    }
+    .header-wrapper .wrapper .left,
+    .header-wrapper .wrapper .right{
+        margin: 0 auto;
+        width: fit-content;
     }
 }
-
 @media(max-width:690px) {
     .footer-wrapper {
         flex-direction: column;
@@ -551,10 +658,29 @@ footer {
     }
 }
 
+@media(max-width:590px){
+    .header-wrapper .wrapper .right .button-container{
+        flex-direction: column;
+    }
+
+    .contact form input,
+    .contact form textarea{
+        width: 250px;
+    }
+    .contact .submit{
+        margin-left: 145px;
+    }
+    
+}
 @media(max-width:450px) {
-    .projects .contents .content {
-        width: 230px;
-        padding: 6px 0px;
+    .header-wrapper .wrapper .right .button-container,
+    .header-wrapper .wrapper .right .links{
+        margin: 0 auto;
+        margin-bottom: 10px;
+        width: fit-content;
+    }
+    .projects .contents .content .heading {
+        width: 200px;
     }
 
     .projects .contents,
@@ -578,13 +704,10 @@ footer {
     }
     .header-wrapper .wrapper .right .info{
         font-size: 17px;
-        margin-left: 0px;
+        margin: 0 auto;
+        text-align: justify;
         
     }
-    .header-wrapper .wrapper .right .button{
-        margin-left: 15px;
-    }
-
     .my-pic-container .pic-wrapper{
         padding: 0px;
     }
